--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		
+		<ol>
+			<li data-ns-test="shoppingList">iPhone 16</li>
+			<li data-ns-test="shoppingList">Macbook Pro</li>
+			<li data-ns-test="shoppingList">Ipad</li>
+			
+		</ol>
+	</div>
+	<div>
+
+		<ul>
+			<li data-ns-test="holidayList">Sikkim</li>
+			<li data-ns-test="holidayList">Northeast</li>
+			<li data-ns-test="holidayList">Jammu</li>
+		</ul>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
